backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  labels:
    app: backend # aggiungi questo
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
